# remove_background

./: .env.example  .gitignore  API.md  README.md  download_models.py  pyproject.toml  requirements.txt  start_server.py
examples/: README.md  client.py  test_all.py  test_anime_model.py  test_file_batch.py  test_file_single.py  test_url_batch.py  test_url_single.py
src/bg_remover/: __init__.py  main.py
src/bg_remover/api/: routes.py
src/bg_remover/core/: config.py  exceptions.py  limiter.py  model_warmer.py  thread_pool.py
src/bg_remover/models/: schemas.py
src/bg_remover/services/: bg_processor.py  bg_remover.py  input_loader.py  oss_uploader.py  output_saver.py
