[project]
name = "bg-remover"
version = "0.2.0"
description = "HTTP streaming service for image background removal"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "rembg>=2.0.50",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.15.0",
    "httpx>=0.25.0",
    "oss2>=2.18.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
bg-remover = "bg_remover.main:main"
